--- a/_posts/2024-03-28-Sam Altman 2024新年的17条总结.md
+++ b/_posts/2024-03-28-Sam Altman 2024新年的17条总结.md
@@ -3,7 +3,7 @@ layout: post
 title: Sam Altman 2024新年的17条总结
 categories:
   - Sam Altman
-image: assets/images/1.jpg
+image: assets/images/Sam_Altman.jpeg
 ---
 
 
