--- a/_posts/2024-03-28-Sam Altman 2024新年的17条总结.md
+++ b/_posts/2024-03-28-Sam Altman 2024新年的17条总结.md
@@ -5,25 +5,33 @@ categories:
   - Sam Altman
 image: assets/images/Sam_Altman.jpeg
 ---
+# 解读Sam Altman的「What I Wish Someone Had Told Me」
 
 
-[What I Wish Someone Had Told Me](https://blog.samaltman.com/what-i-wish-someone-had-told-me)
+%% 原文链接：[What I Wish Someone Had Told Me](https://blog.samaltman.com/what-i-wish-someone-had-told-me) %%
 
 
-1. Optimism, obsession, self-belief, raw horsepower and personal connections are how things get started.
-2. Cohesive teams, the right combination of calmness and urgency, and unreasonable commitment are how things get finished. Long-term orientation is in short supply; try not to worry about what people think in the short term, which will get easier over time.
-3. It is easier for a team to do a hard thing that really matters than to do an easy thing that doesn’t really matter; audacious ideas motivate people.
-4. Incentives are superpowers; set them carefully.
-5. Concentrate your resources on a small number of high-conviction bets; this is easy to say but evidently hard to do. You can delete more stuff than you think.
-6. Communicate clearly and concisely.
-7. Fight bullshit and bureaucracy every time you see it and get other people to fight it too. Do not let the org chart get in the way of people working productively together.
-8. Outcomes are what count; don’t let good process excuse bad results.
-9. Spend more time recruiting. Take risks on high-potential people with a fast rate of improvement. Look for evidence of getting stuff done in addition to intelligence.
-10. Superstars are even more valuable than they seem, but you have to evaluate people on their net impact on the performance of the organization.
-11. Fast iteration can make up for a lot; it’s usually ok to be wrong if you iterate quickly. Plans should be measured in decades, execution should be measured in weeks.
-12. Don’t fight the business equivalent of the laws of physics.
-13. Inspiration is perishable and life goes by fast. Inaction is a particularly insidious type of risk.
-14. Scale often has surprising emergent properties.
-15. Compounding exponentials are magic. In particular, you really want to build a business that gets a compounding advantage with scale.
-16. Get back up and keep going.
-17. Working with great people is one of the best parts of life.
+1.Optimism, obsession, self-belief, raw horsepower and personal connections are how things get started.
+
+要做一件事儿，是从乐观、痴迷、自信、原始动力和人际关系开始的。
+
+2.Cohesive teams, the right combination of calmness and urgency, and unreasonable commitment are how things get finished. Long-term orientation is in short supply; try not to worry about what people think in the short term, which will get easier over time.
+
+
+3.It is easier for a team to do a hard thing that really matters than to do an easy thing that doesn’t really matter; audacious ideas motivate people.
+
+6. Incentives are superpowers; set them carefully.
+7. Concentrate your resources on a small number of high-conviction bets; this is easy to say but evidently hard to do. You can delete more stuff than you think.
+8. Communicate clearly and concisely.
+9. Fight bullshit and bureaucracy every time you see it and get other people to fight it too. Do not let the org chart get in the way of people working productively together.
+10. Outcomes are what count; don’t let good process excuse bad results.
+11. Spend more time recruiting. Take risks on high-potential people with a fast rate of improvement. Look for evidence of getting stuff done in addition to intelligence.
+12. Superstars are even more valuable than they seem, but you have to evaluate people on their net impact on the performance of the organization.
+13. Fast iteration can make up for a lot; it’s usually ok to be wrong if you iterate quickly. Plans should be measured in decades, execution should be measured in weeks.
+14. Don’t fight the business equivalent of the laws of physics.
+15. Inspiration is perishable and life goes by fast. Inaction is a particularly insidious type of risk.
+16. Scale often has surprising emergent properties.
+17. Compounding exponentials are magic. In particular, you really want to build a business that gets a compounding advantage with scale.
+18. Get back up and keep going.
+19. Working with great people is one of the best parts of life.
+
